--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ debug = false
 [dependencies]
 rand = "0.8.5"
 http = "0.2.8"
-get_ref = {path = "../../get_ref"}
+get_ref = "0.1.0"
 url = "2.3.1"
 libloading = "0.7.4"
 muzzman-lib-macros = {path = "macros"}
