--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,4 +20,4 @@ http = "0.2.8"
 get_ref = "0.1.0"
 url = "2.3.1"
 libloading = "0.7.4"
-muzzman-lib-macros = {path = "macros"}
+muzzman-lib-macros = "0.1.0"
