--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,12 @@
 [package]
 name = "muzzman-lib"
+description = "Modulabile Download manager"
 version = "0.1.1"
 edition = "2021"
+authors = ["konkitoman"]
+repository = "https://github.com/ManStudio/MuzzMan-Lib"
+license = "GPL-3.0"
+keywords = ["download", "upload"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
