--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,3 +25,5 @@ get_ref = "0.1.0"
 url = "2.3.1"
 libloading = "0.7.4"
 muzzman-lib-macros = "0.1.0"
+serde = {version = "1.0.152", features = ["derive", "std", "rc", "alloc"]}
+serde_json = "1.0.91"
