--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ version = "0.3.5"
 edition = "2021"
 authors = ["konkitoman"]
 repository = "https://github.com/ManStudio/MuzzMan-Lib"
-license = "GPL-3.0"
+license = "MPL-2.0"
 keywords = ["download", "upload"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
