--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,3 +34,4 @@ muzzman-lib-macros = {path = "./macros"}
 # muzzman-lib-macros = "0.1.3"
 serde = {version = "1.0.152", features = ["derive", "std", "rc", "alloc"]}
 bytes-kman = "0.1"
+log = { version = "0.4.17", features = ["std"] }
