--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,3 +35,4 @@ muzzman-lib-macros = {path = "./macros"}
 serde = {version = "1.0.152", features = ["derive", "std", "rc", "alloc"]}
 bytes-kman = "0.1"
 log = { version = "0.4.17", features = ["std"] }
+once_cell = "1.17.1"
