--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,4 @@ muzzman-lib-macros = {path = "./macros"}
 serde = {version = "1.0.152", features = ["derive", "std", "rc", "alloc"]}
 bytes-kman = "0.3"
 log = { version = "0.4.17", features = ["std"] }
+once_cell = "1"
