--- a/local-session/Cargo.toml
+++ b/local-session/Cargo.toml
@@ -11,3 +11,5 @@ path = "examples/create_element.rs"
 [dependencies]
 muzzman-lib = {path = ".."}
 circular-buffer = "0.1.1"
+libloading = "0.8.0"
+once_cell = "1"
