--- a/module-http/Cargo.toml
+++ b/module-http/Cargo.toml
@@ -3,7 +3,13 @@ name = "muzzman-module-http"
 version = "0.1.0"
 edition = "2021"
 
+[lib]
+crate_type = ["dylib"]
+
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 muzzman-lib = {path = ".."}
+# tokio = {version = "1", features = ["full"]}
+futures = "0.3.28"
+hyper = {version = "0.14", features = ["http1", "http2", "client", "tcp"]}
